# ephemeral-ai

./: .env.example  .gitignore  DEVPOST_SUBMISSION.md  Dockerfile  LICENSE  README.md  TECH_SPEC.md  idea.md  pyproject.toml  requirements.txt
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dashboard/src/: App.tsx  api.ts  index.css  types.ts
dashboard/src/components/: AuditForm.tsx  AuditHistory.tsx  FindingCard.tsx  Header.tsx  LiveAudit.tsx  Report.tsx  RiskScore.tsx  SeverityBadge.tsx  StatsBar.tsx
dashboard/src/hooks/: useAudit.ts
orchestrator/: __init__.py  audit_store.py  cloud_init.py  codescope.py  config.py  cost_tracker.py  droplet_manager.py  fix_generator.py  main.py  models.py  neural_gateway.py  pipeline.py  scout.py  security.py  spaces.py  task_router.py  warm_pool.py  websocket.py  worker_daemon.py
